--- a/src/components/LoginCard.css
+++ b/src/components/LoginCard.css
@@ -1,62 +1,69 @@
-
-
-mdui-card{
+#login-card {
     border-radius: var(--mdui-shape-corner-extra-large);
     display: flex;
     flex-direction: column;
-    width: 75%;
+    width: 70vw;
     height: 60vh;
     padding: 36px;
-    margin: 0 auto;
+    margin: auto;
     box-shadow: var(--mdui-elevation-level5);
-}
+    background-color: rgb(var(--mdui-color-surface-container-lowest));
 
-.login-wrap{
-    display: grid;
-    flex-direction: row;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 0;
-}
+    mdui-icon{
+        font-size: var(--mdui-typescale-display-large-line-height);
+    }
 
-.login-guide{
-}
+    .login-wrap {
+        display: grid;
+        flex-direction: row;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 0;
+    }
 
-.login-text{
-    line-height: var(--mdui-typescale-display-medium-size);
-    font-size: var(--mdui-typescale-display-medium-size);
-    letter-spacing: var(--mdui-typescale-display-medium-tracking);
-    font-weight: var(--mdui-typescale-display-medium-weight);
-}
+    .login-guide {}
 
-.login-form{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-}
+    .login-text {
+        display: flex;
+        align-items: flex-start;
+        line-height: var(--mdui-typescale-display-medium-size);
+        font-size: var(--mdui-typescale-display-medium-size);
+        letter-spacing: var(--mdui-typescale-display-medium-tracking);
+        font-weight: var(--mdui-typescale-display-medium-weight);
+    }
 
-.login-buttons{
-    display: flex;
-    flex-direction: row;
-    justify-content: right;
-    margin-top: auto;
-    margin-bottom: 10px;
-}
+    .login-form {
+        display: grid;
+        flex-direction: column;
+        justify-items: end;
+        grid-template-columns: repeat(1, 2fr);
+    }
 
-.horizontal{
-    padding: var(--mdui-shape-corner-extra-large) 0;
-}
+    .login-buttons {
+        display: flex;
+        flex-direction: row;
+        justify-content: right;
+        margin-top: auto;
+        margin-bottom: 8px;
+    }
+
+    .horizontal {
+        padding: var(--mdui-shape-corner-extra-large) 0;
+    }
 
 
-mdui-text-field{
-    justify-content: right;
-    height: 60px;
-    width: 80%;
-}
+    mdui-text-field {
+        justify-content: right;
+        height: 56px;
+        width: 90%;
+    }
 
-.g-logo{
-}
+    mdui-text-field::part(label){
+        opacity: 100%;
+        background-color: rgb(var(--mdui-color-surface-container-lowest));
+    }
 
-mdui-button{
-    height: var(--mdui-typescale-display-small-line-height);
-    margin-left: 20px;
+    mdui-button {
+        height: var(--mdui-typescale-display-small-line-height);
+        margin-left: 20px;
+    }
 }
