--- a/src/components/NavigationRail.css
+++ b/src/components/NavigationRail.css
@@ -1,10 +1,80 @@
+
+
 mdui-navigation-rail {
     background-color: rgb(var(--mdui-color-surface-container));
     padding: 22px;
     width: 100px;
-    z-index: 5;
-    box-shadow: var(--mdui-elevation-level5);
+    z-index: 54;
+    box-shadow: var(--mdui-elevation-level4);
+    position: fixed;
 }
 
-mdui-navigation-rail-item::part(container){
+#add-fab{
+    box-shadow: var(--mdui-elevation-level5);
+    transition: transform 0.3s ease;
+    z-index: 55;
+}
+
+#add-fab:hover{
+    transform: scale(1.1);
+}
+
+.add-buttons{
+    z-index: 53;
+    width: 200px;
+    position: fixed;
+    top: 35px;  /* 从 FAB 底部偏移一点 */
+    left: 120px;
+    opacity: 0;
+    visibility: hidden;
+    transform: translateX(-100%); /* 初始状态：完全隐藏 */
+    transition: transform 0.3s cubic-bezier(0.25, 0.8, 0.25, 1), opacity 0.3s ease, visibility 0s 0.5s;
+
+}
+
+.add-buttons.open {
+    display: flex;
+    flex-direction: row;
+    gap: 16px;
+    opacity: 1;
+    visibility: visible;
+    transform: translateX(0); /* 向右滑出，完全显示 */
+    transition: transform 0.5s cubic-bezier(0.25, 0.8, 0.25, 1), opacity 0.3s ease;
+}
+
+.add-button {
+    box-shadow: var(--mdui-elevation-level3);
+}
+
+.add-buttons.open .add-button {
+    transform: translateX(0);
+}
+
+.material-symbols-rounded {
+    font-variation-settings:
+        'FILL' 0,
+        'wght' 400,
+        'GRAD' 0,
+        'opsz' 24
+}
+
+.mask{
+    z-index: 52;
+    position: fixed;
+    background-color: rgb(var(--mdui-color-on-secondary));
+    top: 0;
+    left: 0;
+    pointer-events: none;
+    opacity: 0;
+    visibility: hidden;
+    width: 100vw;
+    height: 100vh;
+    transition: transform 0.3s cubic-bezier(0.25, 0.8, 0.25, 1), opacity 0.3s ease, visibility 0s 0.5s;
+}
+
+.mask.open{
+    pointer-events: visible;
+    opacity: 0.5;
+    visibility: visible;
+    transition: transform 0.5s cubic-bezier(0.25, 0.8, 0.25, 1), opacity 0.3s ease;
 }
