--- a/src/components/NavigationRail.css
+++ b/src/components/NavigationRail.css
@@ -1,5 +1,3 @@
-
-
 mdui-navigation-rail {
     background-color: rgb(var(--mdui-color-surface-container));
     padding: 22px;
@@ -7,27 +5,30 @@ mdui-navigation-rail {
     z-index: 54;
     box-shadow: var(--mdui-elevation-level4);
     position: fixed;
+    border-radius: 0 var(--mdui-shape-corner-large) var(--mdui-shape-corner-large) 0;
 }
 
-#add-fab{
+#add-fab {
     box-shadow: var(--mdui-elevation-level5);
     transition: transform 0.3s ease;
     z-index: 55;
 }
 
-#add-fab:hover{
+#add-fab:hover {
     transform: scale(1.1);
 }
 
-.add-buttons{
+.add-buttons {
     z-index: 53;
     width: 200px;
     position: fixed;
-    top: 35px;  /* 从 FAB 底部偏移一点 */
+    top: 35px;
+    /* 从 FAB 底部偏移一点 */
     left: 120px;
     opacity: 0;
     visibility: hidden;
-    transform: translateX(-100%); /* 初始状态：完全隐藏 */
+    transform: translateX(-100%);
+    /* 初始状态：完全隐藏 */
     transition: transform 0.3s cubic-bezier(0.25, 0.8, 0.25, 1), opacity 0.3s ease, visibility 0s 0.5s;
 
 }
@@ -38,7 +39,8 @@ mdui-navigation-rail {
     gap: 16px;
     opacity: 1;
     visibility: visible;
-    transform: translateX(0); /* 向右滑出，完全显示 */
+    transform: translateX(0);
+    /* 向右滑出，完全显示 */
     transition: transform 0.5s cubic-bezier(0.25, 0.8, 0.25, 1), opacity 0.3s ease;
 }
 
@@ -58,7 +60,7 @@ mdui-navigation-rail {
         'opsz' 24
 }
 
-.mask{
+.add-mask {
     z-index: 52;
     position: fixed;
     background-color: rgb(var(--mdui-color-on-secondary));
@@ -72,9 +74,28 @@ mdui-navigation-rail {
     transition: transform 0.3s cubic-bezier(0.25, 0.8, 0.25, 1), opacity 0.3s ease, visibility 0s 0.5s;
 }
 
-.mask.open{
+.add-mask.open {
     pointer-events: visible;
     opacity: 0.5;
+    visibility: visible;
+    transition: transform 0.5s cubic-bezier(0.25, 0.8, 0.25, 1), opacity 0.3s ease;
+}
+
+.panel-mask {
+    position: fixed;
+    top: 0;
+    left: 0;
+    pointer-events: none;
+    opacity: 0;
+    visibility: hidden;
+    width: 100vw;
+    height: 100vh;
+    transition: transform 0.3s cubic-bezier(0.25, 0.8, 0.25, 1), opacity 0.3s ease, visibility 0s 0.5s;
+}
+
+.panel-mask.open {
+    pointer-events: visible;
+    opacity: 0;
     visibility: visible;
     transition: transform 0.5s cubic-bezier(0.25, 0.8, 0.25, 1), opacity 0.3s ease;
 }
