--- a/src/components/account/AccountCard.css
+++ b/src/components/account/AccountCard.css
@@ -6,7 +6,7 @@
     transform: translateY(20px);
     opacity: 0;
     animation: fadeInUp 0.4s ease-in-out forwards;
-    margin-bottom: 20px;
+    margin-bottom: var(--mdui-shape-corner-large);
     mdui-card {
         background-color: rgb(var(--mdui-color-surface-variant));
         box-shadow: var(--mdui-elevation-level2);
@@ -39,6 +39,7 @@
                     display: flex;
                     flex-direction: row;
                     justify-content: flex-start;
+                    gap: var(--mdui-shape-corner-extra-small);
 
                     .bank-name {
                         font-size: var(--mdui-typescale-headline-small-size);
