--- a/src/components/account/AccountCard.css
+++ b/src/components/account/AccountCard.css
@@ -1,12 +1,12 @@
 .acc-card-wrap {
-    width: 75%;
+    width: 80%;
     height: min-content;
     flex-direction: column;
     align-items: center;
     transform: translateY(20px);
     opacity: 0;
     animation: fadeInUp 0.4s ease-in-out forwards;
-    margin-bottom: var(--mdui-shape-corner-large);
+    /*margin-bottom: var(--mdui-shape-corner-large);*/
     mdui-card {
         background-color: rgb(var(--mdui-color-surface-variant));
         box-shadow: var(--mdui-elevation-level2);
