--- a/src/components/account/CardDetailPanel.css
+++ b/src/components/account/CardDetailPanel.css
@@ -5,6 +5,7 @@
         top: 0;
         right: 0;
         width: 35vw;
+        max-width: 560px;
         height: 100%;
         display: flex;
         flex-direction: column;
@@ -25,6 +26,7 @@
         position: fixed;
         top: 0;
         right: 0;
+        max-width: 560px;
         width: 35vw;
         height: 100vh;
         box-sizing: border-box;
